# relative-motions

./: CMakeLists.txt  Info.txt  README.md
include/: all.h  bundle.h  constants.h  cov_in_motions.h  options.h  triplet_utils.h
src/: bundle.cpp  check_propagation.cpp  cov_in_motions.cpp  main.cpp  triplet_utils.cpp  triplet_utils_main.cpp
